[untested] update packages tab in UI to adhere to style guide

--- a/components/builder-web/app/app.scss
+++ b/components/builder-web/app/app.scss
@@ -39,6 +39,7 @@ $output-bourbon-deprecation-warnings: false !default;
 @import "origin/origin-page/origin-keys-tab/key-add-form/key-add-form.dialog";
 @import "origin/origin-page/origin-keys-tab/key-list/key-list.component";
 @import "origin/origin-page/origin-members-tab/origin-members-tab.component";
+@import "origin/origin-page/origin-packages-tab/origin-packages-tab.component";
 @import "origin/origin-page/origin-settings-tab/origin-settings-tab.component";
 @import "origin/origin-page/origin-integrations-tab/origin-integrations-tab.component";
 @import "origin/origin-page/docker-credentials-form/docker-credentials-form.dialog";
