--- a/components/builder-web/app/origin/origin-page/origin-page.component.html
+++ b/components/builder-web/app/origin/origin-page/origin-page.component.html
@@ -1,6 +1,6 @@
 <div class="hab-origin">
   <div class="page-title">
-    <h2>{{origin.name}}</h2>
+    <!-- <h2>{{origin.name}}</h2> -->
     <h4>Origin</h4>
   </div>
   <div *ngIf="!ui.exists && !ui.loading" class="page-body">
