it is... kinda working?
Signed-off-by: Garrett Amini <kadjar@gmail.com>

--- a/components/builder-web/src/app/side-nav/_side-nav.scss
+++ b/components/builder-web/src/app/side-nav/_side-nav.scss
@@ -49,7 +49,7 @@
       }
 
       &.active {
-        background: url("../assets/images/sidebar-active.png") no-repeat right;
+        background: url("/assets/images/sidebar-active.png") no-repeat right;
         background-size: 10px;
         color: $hab-green;
       }
