--- a/components/builder-web/src/stylesheets/base/_theme_palette.scss
+++ b/components/builder-web/src/stylesheets/base/_theme_palette.scss
@@ -1,5 +1,5 @@
-// https://github.com/mbitson/mcg
-// http://mcg.mbitson.com/#!?mcgpalette0=%2387b09a&mcgpalette1=%234296b4&mcgpalette2=%23ff9012&mcgpalette3=%235c6670&mcgpalette4=%23e8f0f6&mcgpalette5=%23eb6852&themename=mathabitat
+/* https://github.com/mbitson/mcg
+// http://mcg.mbitson.com/#!?mcgpalette0=%2387b09a&mcgpalette1=%234296b4&mcgpalette2=%23ff9012&mcgpalette3=%235c6670&mcgpalette4=%23e8f0f6&mcgpalette5=%23eb6852&themename=mathabitat */
 
 $md-mcgpalette0: (
   50 : #f1f6f3,
