--- a/components/builder-web/src/app/app.scss
+++ b/components/builder-web/src/app/app.scss
@@ -1,4 +1,4 @@
-// Copyright (c) 2016-2017 Chef Software Inc. and/or applicable contributors
+/* Copyright (c) 2016-2017 Chef Software Inc. and/or applicable contributors
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -10,19 +10,19 @@
 // distributed under the License is distributed on an "AS IS" BASIS,
 // WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 // See the License for the specific language governing permissions and
-// limitations under the License.
+// limitations under the License. */
 
 $output-bourbon-deprecation-warnings: false !default;
 
-@import "mixins";
 @import "bourbon";
-@import "base/base";
 @import "neat";
-@import "checking-input";
-@import "dialog";
-@import "drop-down";
-@import "item-list";
-@import "tabs";
+@import "../stylesheets/mixins";
+@import "../stylesheets/base/base";
+@import "../stylesheets/checking-input";
+@import "../stylesheets/dialog";
+@import "../stylesheets/drop-down";
+@import "../stylesheets/item-list";
+@import "../stylesheets/tabs";
 
 @import "explore/explore";
 @import "footer/footer";
@@ -40,7 +40,7 @@ $output-bourbon-deprecation-warnings: false !default;
 @import "sign-in-page/sign-in-page";
 
 html {
-  background-color: $dark-blue; // Firefox needs this for Material dialogs.
+  background-color: $dark-blue;
 }
 
 body {
