--- a/components/builder-web/src/stylesheets/base/_grid-settings.scss
+++ b/components/builder-web/src/stylesheets/base/_grid-settings.scss
@@ -1,4 +1,4 @@
-// Copyright (c) 2016-2017 Chef Software Inc. and/or applicable contributors
+/* Copyright (c) 2016-2017 Chef Software Inc. and/or applicable contributors
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -10,17 +10,17 @@
 // distributed under the License is distributed on an "AS IS" BASIS,
 // WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 // See the License for the specific language governing permissions and
-// limitations under the License.
+// limitations under the License. */
 
-@import "neat-helpers"; // or "../neat/neat-helpers" when not in Rails
+@import "neat-helpers";
 
-// Neat Overrides
+/* Neat Overrides
 // $column: 90px;
 // $gutter: 30px;
-// $grid-columns: 12;
+// $grid-columns: 12; */
 $max-width: 100%;
 
-// Neat Breakpoints
+/* Neat Breakpoints */
 $medium-screen: 600px;
 $large-screen: 900px;
 
@@ -34,6 +34,5 @@ $grid-column-gutter: (
 $grid-column-align-edge: true;
 $block-grid-max: 8;
 
-// Overrides for omega-rest mixin (http://www.joshfry.me/blog/2013/05/13/omega-reset-for-bourbon-neat)
 $fg-column: $column;
 $fg-gutter: $gutter;
