--- a/components/builder-web/src/stylesheets/base/_variables.scss
+++ b/components/builder-web/src/stylesheets/base/_variables.scss
@@ -1,4 +1,4 @@
-// Copyright (c) 2016-2017 Chef Software Inc. and/or applicable contributors
+/* Copyright (c) 2016-2017 Chef Software Inc. and/or applicable contributors
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -10,24 +10,24 @@
 // distributed under the License is distributed on an "AS IS" BASIS,
 // WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 // See the License for the specific language governing permissions and
-// limitations under the License.
+// limitations under the License. */
 
-// Typography
+/* Typography */
 $base-font-family: "Titillium Web", $helvetica;
 $heading-font-family: "Montserrat Alternates", $verdana;
 $monospace-font-family: "Source Code Pro", Menlo, Consolas, monospace;
 $tabs-font-family: "Montserrat", $heading-font-family;
 
-// Font Sizes
+/* Font Sizes */
 $base-font-size: 1em;
 $monospace-font-size: rem(12);
 $error-font: rem(14);
 
-// Line height
+/* Line height */
 $base-line-height: 1.5;
 $heading-line-height: 1.2;
 
-// Other Sizes
+/* Other Sizes */
 $base-border-radius: 2px;
 $global-radius: $base-border-radius;
 $base-spacing: rem(20);
@@ -36,7 +36,7 @@ $base-z-index: 0;
 $header-height: 122px;
 $header-height-mobile: 63px;
 
-// Colors
+/* Colors */
 $white: #FFF;
 $off-white: #F8F9F9;
 $black: #323330;
@@ -52,7 +52,7 @@ $light-gray: #D8D8D8;
 $very-light-gray: #E8F0F6;
 $white-slightly-transparent: rgba(255, 255, 255, 0.95);
 
-// Habitat Brand Colors
+/* Habitat Brand Colors */
 $hab-white: #ffffff;
 $hab-blue-light: #e9f1f7;
 $hab-blue: #4296B4;
@@ -74,15 +74,15 @@ $hab-red: #EB6852;
 $hab-yellow: #EBE269;
 $hab-brown: #DEBFA5;
 
-// Brand primary and secondary colors
+/* Brand primary and secondary colors */
 $hab-primary: $hab-green;
 
-// Transparent colors
+/* Transparent colors */
 $hab-gray-dark-15: rgba(125, 134, 140, .15);
 $medium-gray-20: rgba($medium-gray, .2);
 $medium-gray-40: rgba($medium-gray, .4);
 
-// Notification colors
+/* Notification colors */
 $notification-danger-color: $hab-red;
 $notification-info-color: $hab-blue;
 $notification-success-color: $hab-green;
@@ -91,31 +91,31 @@ $success-color: $hab-green;
 $failure-color: $hab-red;
 $queued-color: $hab-blue;
 
-// Font Colors
+/* Font Colors */
 $base-font-color: $dark-gray;
 $action-color: $hab-green;
 $hover-color: $hab-green-dark;
 
-// Border
+/* Border */
 $base-border-color: $light-gray;
 $base-border: 1px solid $base-border-color;
 
-// Background Colors
+/* Background Colors */
 $base-background-color: $off-white;
 $secondary-background-color: tint($base-border-color, 75%);
 
-// Forms
+/* Forms */
 $form-box-shadow: inset 0 1px 3px rgba(#000, 0.06);
 $form-box-shadow-focus: $form-box-shadow, 0 0 5px adjust-color($action-color, $lightness: -5%, $alpha: -0.3);
 $form-box-shadow-focus-failure: $form-box-shadow, 0 0 5px adjust-color($failure-color, $lightness: -5%, $alpha: -0.3);
 $form-box-shadow-focus-loading: $form-box-shadow, 0 0 5px adjust-color($light-gray, $lightness: -5%, $alpha: -0.3);
 $form-box-shadow-focus-success: $form-box-shadow, 0 0 5px adjust-color($success-color, $lightness: -5%, $alpha: -0.3);
 
-// Animations
+/* Animations */
 $base-duration: 150ms;
 $base-timing: ease;
 
-// Build status colors
+/* Build status colors */
 $status-colors: (
   complete: $hab-green,
   dispatched: $hab-orange,
